# spotify-tui

./: .all-contributorsrc  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  banner.txt  build-release.sh  help.yml  how_to_release.md  launch.json  redirect_uri.html  rustfmt.toml  test_clip.json  test_handle.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: cd.yml  ci.yml  main.yml  snap.yml
pkg/brew/: spotify-tui-bin.rb
snap/: snapcraft.yaml
snap/gui/: spt.desktop
src/: app.rs  banner.rs  cli.rs  config.rs  error.rs  handlers.rs  lyrics_client.rs  main.rs  network.rs  paging.rs  redirect_uri.html  redirect_uri.rs  table.rs  ui.rs  user_config.rs  util.rs
src/cli/: clap.rs  cli.rs  cli_app.rs  cmd.rs  handle.rs  mod.rs  output1.txt  test_cli.sh  test_handle.sh  util.rs
src/event/: events.rs  key.rs  mod.rs
src/handlers/: add_to_playlist.rs  album.rs  album_list.rs  album_tracks.rs  analysis.rs  artist.rs  artist_albums.rs  artists.rs  basic_view.rs  common_key_events.rs  dialog.rs  empty.rs  episode_table.rs  error_menu.rs  error_screen.rs  help_menu.rs  home.rs  input.rs  library.rs  lyrics.rs  made_for_you.rs  mod.rs  playbar.rs  playlist.rs  podcasts.rs  queue_menu.rs  recently_played.rs  search_results.rs  select_device.rs  song_table.rs  track_table.rs
src/ui/: audio_analysis.rs  clear.rs  help.rs  mod.rs  util.rs
visulizations/: keys.rhai
