[package]
name = "spotify-tui"
description = "A terminal user interface for Spotify"
homepage = "https://github.com/Rigellute/spotify-tui"
documentation = "https://github.com/Rigellute/spotify-tui"
repository = "https://github.com/Rigellute/spotify-tui"
keywords = ["spotify", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.19.0"
authors = ["Alexander Keliris <rigellute@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { git = "https://github.com/Rigellute/rspotify" }
tui = { version = "0.9.3", features = ["crossterm"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
dirs = "2.0.2"
clap = "2.33.0"
unicode-width = "0.1.7"
backtrace = "0.3.46"
clipboard = "0.5.0"
crossterm = "0.17"
tokio = { version = "0.2", features = ["full"] }
proc-macro2 = "1.0.12"
rand = "0.7.3"
anyhow = "1.0.28"

[[bin]]
bench = false
path = "src/main.rs"
name = "spt"
