[package]
name = "spotify-tui"
description = "A terminal user interface for Spotify"
homepage = "https://github.com/Rigellute/spotify-tui"
documentation = "https://github.com/Rigellute/spotify-tui"
repository = "https://github.com/Rigellute/spotify-tui"
keywords = ["spotify", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.25.0"
authors = ["Alexander Keliris <rigellute@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.10.0"
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
dirs = "3.0.2"
clap = "2.33.3"
unicode-width = "0.1.8"
backtrace = "0.3.57"
arboard = "1.2.0"
crossterm = "0.20"
tokio = { version = "0.2", features = ["full"] }
rand = "0.8.4"
anyhow = "1.0.56"

[[bin]]
bench = false
path = "src/main.rs"
name = "spt"
